--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ paginate = 5
 
 [languages]
   [languages.en]
-    title = "Terminal"
+    title = "Eidolon123"
     subtitle = "A simple, retro theme for Hugo"
     keywords = ""
     copyright = ""
